count_test_update

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_executable(test_count_only test_count_only.cu)
 add_executable(test_hybrid_search test_hybrid_search.cu)
 add_executable(test_count_minimal test_count_minimal.cu)
+add_executable(test_debug test_debug.cu)
