update CMakeLists config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,15 @@
 cmake_minimum_required(VERSION 3.18 FATAL_ERROR)
+
+# Set CUDA architectures (for RTX 2080 Ti) - MUST be before project()
+set(CMAKE_CUDA_ARCHITECTURES 75)
+
 project(GPUHashMap LANGUAGES CXX CUDA)
 
 # Set C++ standard
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CUDA_STANDARD 17)
-set(CMAKE_CUDA_STANDARD_REQUIRED ON)
-
-# Set CUDA architectures (for RTX 2080 Ti)
-set(CMAKE_CUDA_ARCHITECTURES 80)
-
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CUDA_STANDARD 11)
 set(CMAKE_CUDA_STANDARD_REQUIRED ON)
-
-# Set CUDA architectures (for RTX 2080 Ti)
-set(CMAKE_CUDA_ARCHITECTURES 75)
 
 
 # Build type
