--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,44 +1,5 @@
-cmake_minimum_required(VERSION 3.18 FATAL_ERROR)
-project(GPUHashMap LANGUAGES CXX CUDA)
+add_executable(test_count_only test_count_only.cu)
+add_executable(test_hybrid_search test_hybrid_search.cu)
+add_executable(test_count_minimal test_count_minimal.cu)
+add_executable(test_delete test_delete.cu)
 
-# Set C++ standard
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CUDA_STANDARD 17)
-set(CMAKE_CUDA_STANDARD_REQUIRED ON)
-
-# Set CUDA architectures (for RTX 2080 Ti)
-set(CMAKE_CUDA_ARCHITECTURES 80)
-
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CUDA_STANDARD 11)
-set(CMAKE_CUDA_STANDARD_REQUIRED ON)
-
-# Set CUDA architectures (for RTX 2080 Ti)
-set(CMAKE_CUDA_ARCHITECTURES 75)
-
-
-# Build type
-set(CMAKE_BUILD_TYPE "Release")
-
-# Output directory
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-
-# Note: GPU architecture now set via CMAKE_CUDA_ARCHITECTURES above
-# To change: set CMAKE_CUDA_ARCHITECTURES to your GPU's compute capability
-# Examples: 75 (RTX 2080), 80 (A100), 86 (RTX 3090)
-
-# Include directories
-include_directories(${CMAKE_SOURCE_DIR}/include)
-include_directories(${CMAKE_SOURCE_DIR}/src)
-
-# Optional verbose PTXAS
-option(CUDA_VERBOSE_PTXAS "Enable verbose PTXAS output" OFF)
-if(CUDA_VERBOSE_PTXAS)
-  set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -Xptxas=-v")
-endif()
-
-# Add subdirectories
-add_subdirectory(examples)
-add_subdirectory(test)
