--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,3 +3,4 @@ add_executable(test_hybrid_search test_hybrid_search.cu)
 add_executable(test_hash_map_comprehensive test_hash_map_comprehensive.cu)
 add_executable(test_count_comprehensive test_count_comprehensive.cu)
 add_executable(test_debug test_debug.cu)
+add_executable(test_insert test_insert.cu)
