--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,4 +5,4 @@ add_executable(test_count_comprehensive test_count_comprehensive.cu)
 add_executable(test_debug test_debug.cu)
 add_executable(test_insert test_insert.cu)
 add_executable(test_delete test_delete.cu)
-
+add_executable(test_count_performance test_count_performance.cu)
