--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,6 +7,8 @@ add_executable(test_insert_warp_divergence test_insert_warp_divergence.cu)
 add_executable(test_debug test_debug.cu)
 add_executable(test_insert test_insert.cu)
 add_executable(test_delete test_delete.cu)
+add_executable(test_delete_optimized test_delete_optimized.cu)
 add_executable(test_count_performance test_count_performance.cu)
 add_executable(test_iterator test_iterator.cu)
+add_executable(test_cuda_version test_cuda_version.cu)
 
