experiment for search

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,6 +9,7 @@ add_executable(test_insert test_insert.cu)
 add_executable(test_delete test_delete.cu)
 add_executable(test_delete_optimized test_delete_optimized.cu)
 add_executable(test_count_performance test_count_performance.cu)
+add_executable(test_search_performance test_search_performance.cu)
 add_executable(test_iterator test_iterator.cu)
 add_executable(test_cuda_version test_cuda_version.cu)
 add_executable(test_delete_performance test_delete_performance.cu)
